--- a/src/EcTranslators/EcTranslators.csproj
+++ b/src/EcTranslators/EcTranslators.csproj
@@ -294,25 +294,28 @@
       <Version>3.4.0</Version>
     </PackageReference>
     <PackageReference Include="Google.Protobuf">
-      <Version>3.29.3</Version>
+      <Version>3.30.2</Version>
+    </PackageReference>
+    <PackageReference Include="Grpc.Auth">
+      <Version>2.70.0</Version>
     </PackageReference>
     <PackageReference Include="Grpc.Core">
       <Version>2.46.6</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Configuration" Condition="('$(OS)'=='Windows_NT')">
-      <Version>9.0.1</Version>
+      <Version>9.0.4</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Condition="('$(OS)'=='Windows_NT')">
-      <Version>9.0.1</Version>
+      <Version>9.0.4</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions">
-      <Version>9.0.1</Version>
+      <Version>9.0.4</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Http.Polly" Condition="('$(OS)'=='Windows_NT')">
-      <Version>9.0.1</Version>
+      <Version>9.0.4</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions">
-      <Version>9.0.1</Version>
+      <Version>9.0.4</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Condition="('$(OS)'=='Windows_NT')">
       <Version>13.0.3</Version>
@@ -321,22 +324,22 @@
       <Version>5.0.0</Version>
     </PackageReference>
     <PackageReference Include="System.Diagnostics.DiagnosticSource">
-      <Version>9.0.1</Version>
+      <Version>9.0.4</Version>
     </PackageReference>
     <PackageReference Include="System.Memory" Condition="('$(OS)'=='Windows_NT')">
-      <Version>4.6.0</Version>
+      <Version>4.6.3</Version>
     </PackageReference>
     <PackageReference Include="System.Net.Http.WinHttpHandler" Condition="('$(OS)'=='Windows_NT')">
-      <Version>9.0.1</Version>
+      <Version>9.0.4</Version>
     </PackageReference>
     <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Condition="('$(OS)'=='Windows_NT')">
-      <Version>6.1.0</Version>
+      <Version>6.1.2</Version>
     </PackageReference>
     <PackageReference Include="System.Text.Json" Condition="('$(OS)'=='Windows_NT')">
-      <Version>9.0.1</Version>
+      <Version>9.0.4</Version>
     </PackageReference>
     <PackageReference Include="System.Threading.Tasks.Extensions">
-      <Version>4.6.0</Version>
+      <Version>4.6.3</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
